--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,15 @@ appdirs==1.4.4
 asgiref==3.4.1
 black==21.7b0
 click==8.0.1
+colorama==0.4.4
+dj-database-url==0.5.0
 Django==3.2.6
+gunicorn==20.1.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
+psycopg2==2.9.1
 pytz==2021.1
 regex==2021.8.21
 sqlparse==0.4.1
 tomli==1.2.1
+whitenoise==5.3.0
