--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ black==21.7b0
 click==8.0.1
 Django==3.2.6
 django-colorfield==0.4.2
+django-tinymce==3.3.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
 pytz==2021.1
